[gd_scene load_steps=6 format=3 uid="uid://w4bxcvu2q3eg"]

[ext_resource type="Script" uid="uid://bo2phtnpp1u4c" path="res://scenes/titlescreen.gd" id="1_bolpj"]
[ext_resource type="Theme" uid="uid://cgah1efpjglvn" path="res://UI/Title screen.tres" id="2_b4itm"]
[ext_resource type="Texture2D" uid="uid://0g7lvjca68u0" path="res://UI/9gag or whatever.png" id="3_4bvcf"]
[ext_resource type="AudioStream" uid="uid://thjkyjoyx8uh" path="res://sound/bgm_mainmenu_fd1.ogg" id="4_t7v6v"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_55nes"]
texture = ExtResource("3_4bvcf")

[node name="Titlescreen" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bolpj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1921.0
offset_bottom = 1077.0
theme = ExtResource("2_b4itm")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_right = 1921.0
offset_bottom = 1077.0
theme_override_styles/panel = SubResource("StyleBoxTexture_55nes")

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -483.5
offset_top = 128.0
offset_right = 484.5
offset_bottom = 319.0
grow_horizontal = 2
theme = ExtResource("2_b4itm")
theme_override_font_sizes/font_size = 128
text = "Doki Doki Dragoons"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -107.0
offset_top = -308.0
offset_right = 107.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_b4itm")
theme_override_constants/separation = 20

[node name="Playbutton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_b4itm")
theme_override_font_sizes/font_size = 64
text = "Play"

[node name="Optionsbutton" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_b4itm")
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="Quitbutton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_b4itm")
theme_override_font_sizes/font_size = 64
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_t7v6v")
volume_db = -10.0
autoplay = true

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Playbutton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Playbutton" to="." method="_on_playbutton_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Optionsbutton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Optionsbutton" to="." method="_on_optionsbutton_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Quitbutton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quitbutton" to="." method="_on_quitbutton_pressed"]
